--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,14 +5,11 @@
     <vendor>ermattt</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.java</depends>
+    <depends>org.jetbrains.kotlin</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
-
-    <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.ermattt.j2kextensions.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+    <extensions defaultExtensionNs="com.jetbrains.kotlin">
+        <j2kPreprocessorExtension implementation="com.github.ermattt.j2kextensions.preprocessors.AnnotateParametersNonNullWhenExplicitlyDereferenced"/>
     </extensions>
-
-    <applicationListeners>
-        <listener class="com.github.ermattt.j2kextensions.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
-    </applicationListeners>
 </idea-plugin>
